# hello_py

./: .gitignore  Dockerfile  compose.yaml  main.py  makefile  pyproject.toml
app/: main.py
app/application/use_cases/signup/: signup.py  signup_input.py  signup_output.py
app/domain/entities/: account.py
app/domain/exceptions/: email_already_exists.py  invalid_document.py  invalid_email.py  invalid_name.py
app/domain/repositories/: account.py
app/domain/value_objects/: account_id.py  document.py  email.py  name.py
app/infraestructure/database/: session.py
app/infraestructure/models/: account.py
app/infraestructure/repositories/: account.py
migrations/: env.py
migrations/versions/: b3ff4f237fb8_init.py
tests/: test_app.py  test_document.py  test_email.py  test_name.py  test_signup_endpoint.py  test_signup_use_case.py
tests/fakes/repositories/: in_memory_account_repository.py
